fixed alignment of title of page

--- a/docs/mainpagestyle.css
+++ b/docs/mainpagestyle.css
@@ -39,3 +39,15 @@
         text-align:center;
 
 }
+
+#body{
+
+        background-color:rgb(12, 13, 14);
+
+}
+
+#introTitle{
+
+        text-align:center;
+
+}
